--- a/WebScrapper_Prototype/Views/Checkout/OrderPlaced.cshtml
+++ b/WebScrapper_Prototype/Views/Checkout/OrderPlaced.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WazaWare.co.za.Models.ViewModels
 @{
-	ViewData["Title"] = "CheckoutNewUser";
+	ViewData["Title"] = "CheckoutUser";
 }
 <!DOCTYPE html>
 <configuration>
