--- a/WebScrapper_Prototype/Views/Shared/_TopBar.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_TopBar.cshtml
@@ -51,7 +51,7 @@
 						<ul class="list-main">
 							<li><i class="ti-shopping-cart"></i><a href="/Shop/Cart">Cart</a></li>
 							<li><i class="ti-bag"></i><a href="/Shop">Shop</a></li>
-							<li><i class="ti-power-off"></i><a href="/User">Account: @Model.userView.FirstName</a></li>
+							<li><i class="ti-power-off"></i><a href="/User">Account: @Model.UserView.FirstName</a></li>
 						</ul>
 					}
 				</div>
