--- a/WebScrapper_Prototype/Views/_OrderPending.cshtml
+++ b/WebScrapper_Prototype/Views/_OrderPending.cshtml
@@ -12,7 +12,7 @@
             <div class="card mb-3">
             <img src="https://wazaware.co.za/Media/Logo/LogoOfficialCropped.png" style="height:10rem" class="img-fluid card-img-top" alt="Logo">
                 <div class="card-body">
-                  <h1 class="card-title">Hello @Model.userView.FirstName,</h1>
+                  <h1 class="card-title">Hello @Model.UserView.FirstName,</h1>
                   <h2>We have received your order! (@Model.Summary.OrderId)</h2>
                   <p>
                     The next step is for you to make payment and send us proof of payment.<br>
