--- a/WebScrapper_Prototype/Views/Checkout/Register.cshtml
+++ b/WebScrapper_Prototype/Views/Checkout/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WazaWare.co.za.Models.UserViewModel
 @{
-	ViewData["Title"] = "CheckoutNewUser";
+	ViewData["Title"] = "CheckoutUser";
 }
 <!DOCTYPE html>
 <configuration>
